bug with stone z-index fixed

--- a/src/scss/stages/_stage4.scss
+++ b/src/scss/stages/_stage4.scss
@@ -5,7 +5,7 @@
 		position: absolute;
 		bottom: 0px;
 		left: 0px;
-		z-index: 10;
+		z-index: 9;
 		width: 598px;
 		height: 302px;
 		background: url('../images/Screen_4_Stones.png') no-repeat 0 0;
